Change name of method and constant